# my-limnoria-plugins

Calendar/: README.md  __init__.py  config.py  plugin.py  setup.py  test.py
SpiffyTitles/: README.md  __init__.py  _version.py  config.py  plugin.py  pyproject.toml
UserList/: README.md  __init__.py  config.py  plugin.py  setup.py  test.py
