[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-spiffytitles"
version = "2026.03.11+git"
authors = [
    { name = "butterscotchstallion" },
    { name = "oddluck <oddluck@riseup.net>" },
    { name = "appas <matias.wilkman@gmail.com>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
    "requests",
    "beautifulsoup4",
    "jinja2",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.optional-dependencies]
wikipedia = [
    "wikipedia-api",
]

[project.entry-points.'limnoria.plugins']
SpiffyTitles = "limnoria_spiffytitles"

[tool.setuptools.package-dir]
"limnoria_spiffytitles" = "."

[tool.setuptools.package-data]
"limnoria_spiffytitles" = ["locales/*.po"]
